# fotorite

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  vcpkg.json
.github/workflows/: ci.yml
src/: main.cpp
src/app/: main_screen.cpp  main_screen.h
src/core/: core.h  defs.h  fileio.cpp  fileio.h  fileio_tests.cpp  imageio.cpp  imageio.h  imageio_tests.cpp  pool.h  pool_tests.cpp  properties.cpp  properties.h  properties_tests.cpp  settings.cpp  settings.h  settings_tests.cpp  stringutils.cpp  stringutils.h  stringutils_tests.cpp  timer.h
src/libcore/core/: defs.h  fileio.cpp  fileio.h  imageio.cpp
src/model/: catalog.cpp  catalog.h  document.h
src/process/: device.cpp  device.h  device_tests.cpp
src/shaders/: shaders.cpp  shaders.h  test.cs.hlsl  test_buffer.cs.hlsl  test_image.cs.hlsl
src/shaders/compiled/: shader_includes.h  shader_names.h  test_buffer_cs.h  test_image_cs.h
src/ui/: catalog_view.cpp  catalog_view.h  common.h  main_screen.cpp  main_screen.h  panel.cpp  panel.h
src/views/: catalog_view.cpp  catalog_view.h
tests/: test_core_fileio.cpp
tests/libcore/core/: test_fileio.cpp
